fix(ui): Fix background not covering status bar on iOS Safari

--- a/static/style.css
+++ b/static/style.css
@@ -76,7 +76,7 @@ header {
 }
 
 @media (max-width: 768px) {
-  body {
+  html {
     background-attachment: scroll;
   }
 }
